# rss-reader

./: .gitignore  AGENTS.md  MIGRATION_PLAN.md  README.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
backend/: package.json  tsconfig.json
backend/src/: index.ts
backend/src/db/: connection.ts
backend/src/middleware/: dbRetry.ts
backend/src/routes/: articles.ts  feeds.ts  settings.ts  translation.ts
backend/src/services/: rss.ts  translate.ts
backend/src/types/: index.ts
backend/src/utils/: htmlToMarkdown.ts
docs/: hotnews.opml  performance.md
docs/plans/: 2025-02-09-rss-reader-improvements.md  2026-02-08-rss-reader-design.md
icons/: icon.icns
scripts/: build-mac-dmg-simple.sh  build-mac-dmg.sh  ci-monitor.cjs  clean-build.sh  generate-icons.sh  migrate-to-api.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  shell-sidecar.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  rss.rs
src/components/: ArticleList.tsx  ArticleView.tsx  KeyboardShortcutsHelp.tsx  MarkdownRenderer.tsx  OPMLImport.tsx  Settings.tsx  Sidebar.tsx  ThemeProvider.tsx  Toast.tsx
src/hooks/: useKeyboardShortcuts.ts
src/lib/: api.ts  opml.test.ts  opml.ts  utils.ts
src/stores/: useAppStore.test.ts  useAppStore.ts
src/test/: setup.ts
