[package]
name = "rss-reader"
version = "0.1.0"
description = "A fast, comfortable RSS reader desktop app"
authors = ["bingal"]
edition = "2021"

[lib]
name = "rss_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "rand"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["blocking"] }
feed-rs = "1.4"
