[package]
name = "rss-reader"
version = "0.1.5"
description = "A fast, comfortable RSS reader desktop app"
authors = ["bingal"]
edition = "2021"

[lib]
name = "rss_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
